# niche-contant

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  DOCKER.md  Dockerfile  README.md  backfill_urls.py  dashboard_export copy.xlsx  dashboard_export.xlsx  download_niches.py  export_dashboard_data.py  pyproject.toml  report.json  report.json.bak  report.txt
dashboard/: README.md  app.py  start.sh
dashboard/templates/: gallery.html  index.html
evaluation/: niche_analysis_results_Eagle2.5-8B.csv  niche_analysis_results_OpenGVLab-InternVL3_5-8B.csv  niche_analysis_results_Pixtral-12B-2409.csv  niche_analysis_results_Qwen2.5-Omni-7B.csv  niche_analysis_results_Qwen3-Omni-30B-A3B-Instruct.csv  niche_analysis_results_Qwen3-VL-30B-A3B-Instruct-AWQ.csv  niche_analysis_results_aya-vision-32b.csv  niche_analysis_results_aya-vision-8b.csv  niche_analysis_results_claude-sonnet-4-5-20250929.csv  niche_analysis_results_gpt-5.2.csv
scripts/: optimize_images.py
